src/objects/Job_Card__c.object
<CustomObject>
    <description>Workshop purpose</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engine_Number__c</fullName>
        <label>Engine Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name  of the customer</description>
        <inlineHelpText>Please enter First Name of the customer</inlineHelpText>
        <label>First Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <description>Job number</description>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <externalId>true</externalId>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the customer</description>
        <inlineHelpText>Please enter the last name of the customer</inlineHelpText>
        <label>Last Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Holden</fullName>
                </value>
                <value>
                    <fullName>Mazda</fullName>
                </value>
                <value>
                    <fullName>Mercedez</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Toyota</fullName>
                </value>
                <value>
                    <fullName>Volks Wagon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Make__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commodore</fullName>
                </value>
                <value>
                    <fullName>Barina</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Caprice</fullName>
                </value>
                <value>
                    <fullName>Cruze</fullName>
                </value>
                <value>
                    <fullName>Captiva</fullName>
                </value>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Falcon</fullName>
                </value>
                <value>
                    <fullName>Fiesta</fullName>
                </value>
                <value>
                    <fullName>Mustang</fullName>
                </value>
                <value>
                    <fullName>Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ODO_Meter__c</fullName>
        <label>ODO Meter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Please enter valid phone number</inlineHelpText>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>States in Australia</description>
        <inlineHelpText>Please select State</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address of the customer</description>
        <inlineHelpText>Please enter the street address of the customer</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>Vehicle Identification Number</description>
        <inlineHelpText>Vehicle Identification Number</inlineHelpText>
        <label>VIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year of the car</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Job Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>